<resources>
    <string name="app_name">vk client</string>
    <string name="audio_attachment_type_label">Аудио</string>
    <string name="podcast_attachment_type_label">Подкаст</string>
    <string name="link_attachment_type_label">Ссылка</string>
    <string name="video_attachment_type_label">Видео</string>
    <string name="photo_attachment_type_label">Фото</string>
    <string name="logout_label">Сменить профиль</string>
    <string name="empty_content_description" />
    <string name="user_photo_content_description">user photo</string>
    <string name="source_icon_content_description">source icon</string>
    <string name="from_icon_content_description">from icon</string>
    <string name="attachment_image_content_description">attachment image</string>
    <string name="friend_photo_content_description">friend photo</string>
    <string name="online_status_icon_content_description">online status icon</string>
    <string name="image_content_description">image</string>
    <string name="likes_icon_content_description">likes icon</string>
    <string name="comments_icon_content_description">comments icon</string>
    <string name="reposts_icon_content_description">reposts icon</string>
    <string name="views_icon_content_description">views icon</string>
    <string name="user_status_icon_content_description">user status icon</string>
    <string name="user_friends_icon_content_description">user friends icon</string>
    <string name="user_followers_icon_content_description">user followers icon</string>
    <string name="user_city_icon_content_description">user city icon</string>
    <string name="user_education_icon_content_description">user education icon</string>
    <string name="animation_setting_label">Анимация списков</string>
    <string name="more_info_icon_content_description">more info icon</string>
    <string name="more_info_label">Подробная информация</string>
    <string name="status_label">Статус</string>
    <string name="birth_day_label">День рождения</string>
    <string name="home_town_label">Родной город</string>
    <string name="education_label">ВУЗ</string>
    <string name="interests_label">Интересы</string>
    <string name="music_label">Любимая музыка</string>
    <string name="movie_label">Любимые фильмы</string>
    <string name="games_label">Любимые игры</string>
    <string name="about_label">О себе</string>
    <string name="source_verified_icon_content_description">source verified icon</string>
    <string name="from_verified_icon_content_description">from verified icon</string>
    <string name="news_title">news</string>
    <string name="friends_title">friends</string>
    <string name="settings_title">settings</string>
    <string name="groups_title">groups</string>
    <string name="group_photo_content_description">group photo</string>
    <string name="verified_icon_content_description">verified icon</string>
    <string name="group_site_icon_content_description">group site icon</string>
    <string name="group_description_icon_content_description">group description icon</string>
    <string name="connection_error_label">Отсутствует подключение к интернету</string>
    <string name="repeated_connection">Повторить подключение</string>
    <string name="edit_city_content_description">edit city</string>
    <string name="edit_status_content_description">edit status</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
</resources>
